--- a/my-erp-ionic/package.json
+++ b/my-erp-ionic/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^8.2.0",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -21,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "@auth0/cordova": "^0.4.3",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/safari-view-controller": "^5.22.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -31,15 +33,23 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "auth0-js": "^9.12.2",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-customurlscheme": "^5.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "json-server": "^0.16.1",
+    "npm-force-resolutions": "0.0.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^9.0.0",
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.23",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
@@ -61,5 +71,27 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "io.ionic.myerp.mobile",
+        "ANDROID_SCHEME": "io.ionic.myerp.mobile",
+        "ANDROID_HOST": "moovio.eu.auth0.com",
+        "ANDROID_PATHPREFIX": "/cordova/io.ionic.myerp.mobile/callback"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
+  }
 }
