--- a/my-erp-ionic/package.json
+++ b/my-erp-ionic/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-safariviewcontroller": "^1.6.0",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
@@ -89,7 +90,8 @@
         "ANDROID_SCHEME": "io.ionic.myerp.mobile",
         "ANDROID_HOST": "moovio.eu.auth0.com",
         "ANDROID_PATHPREFIX": "/cordova/io.ionic.myerp.mobile/callback"
-      }
+      },
+      "cordova-plugin-safariviewcontroller": {}
     },
     "platforms": [
       "android"
